# open-llm-observability

./: .markdownlint.json  CONTRIBUTING.md  README.md  RFC.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
examples/: quickstart.py
sdk/python/: pyproject.toml
sdk/python/open_llm_obs/: __init__.py  instrument.py  metrics.py  tracer.py
sdk/python/tests/: __init__.py  test_metrics.py
